# ig-workshop

./: .gitignore  Cargo.toml  README.md  notes.md
.github/workflows/: release.yml
ArkCore/EV_CrashTeamRacingNitroFueled/: initscript  metafields.xml
ArkCore/EV_SkylandersGiants/: initscript  metaenums.xml  metafields.xml
ArkCore/EV_SkylandersImaginators/: initscript  metaenums.xml  metafields.xml
ArkCore/EV_SkylandersSpyrosAdventure/: initscript  metaobjects.xml
docs/: igArchive.md
ig-library/: Cargo.toml  build.rs
ig-library/ArkCore/EV_SkylandersTrapTeam/: metaobjects.xml
ig-library/src/: lib.rs  tests.rs
ig-library/src/client/: archive.rs  c_precache_file_loader.rs  cdn.rs  client.rs  mod.rs  precache.rs
ig-library/src/core/: fs.rs  ig_archive.rs  ig_archive_manager.rs  ig_archive_mount_manager.rs  ig_ark_core.rs  ig_core_platform.rs  ig_custom.rs  ig_external_ref.rs  ig_file_context.rs  ig_fs.rs  ig_handle.rs  ig_lists.rs  ig_memory.rs  ig_objects.rs  ig_registry.rs  ig_std_lib_storage_device.rs  memory.rs  mod.rs
ig-library/src/core/load/: ig_igb_loader.rs  ig_igx_loader.rs  ig_igz_loader.rs  ig_loader.rs  mod.rs
ig-library/src/core/meta/: ig_metadata_manager.rs  ig_metafield.rs  ig_xml_metadata.rs  mod.rs
ig-library/src/core/meta/field/: ig_metafield_registry.rs  ig_metafields.rs  mod.rs
ig-library/src/core/meta/field/impl/: ig_int_meta_field.rs  ig_memory_ref_meta_field.rs  ig_object_ref_meta_field.rs  ig_placeholder_meta_field.rs  ig_placeholder_metafield.rs  ig_size_type_meta_field.rs  ig_string_meta_field.rs  mod.rs
ig-library/src/core/save/: ig_igb_saver.rs  ig_igx_saver.rs  ig_igz_saver.rs  mod.rs
ig-library/src/core/util/: ig_hash.rs  mod.rs
ig-library/src/gfx/: ig_gfx_platform.rs  mod.rs
ig-library/src/tfb_game/: mod.rs  stream_context.rs
ig-library/src/util/: byteorder_fixes.rs  ig_common.rs  ig_hash.rs  ig_name.rs  mod.rs
ig-proc-macros/: Cargo.toml  README.md
src/: logger.rs  main.rs  window.rs
(+14 files in other folders)
